# orion-jets

./: LICENSE  README.md  main.py  pyproject.toml
data/: hh529-boxes.reg
notebooks/: 00-explorar.ipynb
scripts/: calc.py  calc2.py  calc3.py  fetch_data_argparse.py
src/orion_jets/: __init__.py  fetch_data.py  io.py  xcorr2d.py
tests/: test_xcorr2d_basic.py
