[project]
name = "orion-jets"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "William Henney", email = "whenney@gmail.com" }
]
requires-python = ">=3.14"
dependencies = []

[project.scripts]
orion-jets = "orion_jets:main"

[build-system]
requires = ["uv_build>=0.9.9,<0.10.0"]
build-backend = "uv_build"
