[project]
name = "orion-jets"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "William Henney", email = "whenney@gmail.com" }
]
requires-python = ">=3.14"
dependencies = [
    "astropy>=7.1.1",
    "cyclopts>=4.2.4",
    "ipykernel>=7.1.0",
    "ipympl>=0.9.8",
    "ipywidgets>=8.1.8",
    "jupyterlab>=4.5.0",
    "jupyterlab-widgets>=3.0.16",
    "matplotlib>=3.10.7",
    "pytest>=9.0.1",
    "regions>=0.11",
    "scipy>=1.16.3",
    "seaborn>=0.13.2",
    "typer>=0.20.0",
]

[project.scripts]
orion-jets = "orion_jets:main"

[build-system]
requires = ["uv_build>=0.9.9,<0.10.0"]
build-backend = "uv_build"
